--- a/css/style.css
+++ b/css/style.css
@@ -422,6 +422,8 @@ input[type="text"] {
 
 .radio-form input[type="radio"]:checked + label {
   opacity: 1;
+  color: var(--border-pink);
+  text-shadow: 2px 2px 5px var(--border-pink);
 }
 
 .btn-control.submit {
@@ -541,17 +543,17 @@ input[type="text"] {
   margin-top: 50px;
 }
 
-/***************************Start*************************/
-#sketch-holder {
-  position: absolute;
-  left: 0;
-  right: 0;
-  bottom: 0;
-  top: 0;
-  width: 100%;
-  height: 100%;
+/***************************View Memory*************************/
+/* #sketch-holder {
+  width: 50vh;
   text-align: center;
 }
+
+#sketch-holder:before {
+  content: "";
+  display: block;
+  padding-top: 100%;
+} */
 
 .closeBtn {
   position: fixed;
@@ -561,6 +563,53 @@ input[type="text"] {
   border-color: transparent;
   z-index: 999;
 }
+
+.memory-title {
+  font-size: 3em;
+  margin: 200px 0 0 0;
+  color: var(--cpurple);
+  text-shadow: 0 0 10px var(--cpurple);
+}
+
+.view-memory {
+  color: white;
+  font-size: 3em;
+}
+
+.view-content {
+  width: 100%;
+  max-height: 200px;
+  text-align: left;
+  overflow-y: auto;
+  margin: 20px 0;
+  padding: 20px;
+  font-size: 1.2em;
+  color: white;
+}
+
+h3 {
+  color: var(--cpurple);
+  font-size: 2em;
+}
+
+.scroll {
+  box-shadow: inset 0 0 0px var(--cpurple), inset 0 0 20px var(--cpurple),
+    inset 0 0 20px var(--cpurple), 0 0 0px var(--cpurple),
+    0 0 1px var(--cpurple), 0 0 20px var(--cpurple);
+}
+
+.scroll::-webkit-scrollbar {
+  width: 10px;
+}
+
+.scroll::-webkit-scrollbar-track {
+  background: #bdbdbd;
+}
+
+.scroll::-webkit-scrollbar-thumb {
+  background: var(--cpurple);
+}
+
 /***************************Neon Button*************************/
 .svg-wrapper {
   height: 60px;
